--- a/index.html
+++ b/index.html
@@ -4619,7 +4619,7 @@
       matched = search dict, exclude, included, correct_places
       
       html = matched.map do |m|
-        "<div><a href=\"https://ejje.weblio.jp/content/#{m}\" target=\"_blank\">#{m}</a></div>"
+        "<div><a href=\"https://www.merriam-webster.com/dictionary/#{m}\" target=\"_blank\">#{m}</a></div>"
       end.join
       document.getElementById("result")[:innerHTML] = html
     end
