--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <script src="https://cdn.jsdelivr.net/npm/ruby-head-wasm-wasi@0.3.0-2022-09-06-f/dist/browser.script.iife.js"></script>
   <script type="text/ruby">
     require "js"
+    require "erb"
 
     dict = %w[
     abaci
@@ -4610,6 +4611,12 @@
       matched
     end
 
+    template = ERB.new(<<~'END_HTML')
+      <div>
+        <a href="https://www.merriam-webster.com/dictionary/<%= word %>" target="_blank"><%= word %></a>
+      </div>
+    END_HTML
+
     document = JS.global[:document]
     search_button = document.getElementById "search_button"
     search_button.addEventListener "click" do
@@ -4617,10 +4624,8 @@
       included = document.getElementById("included")[:value]
       correct_places = document.getElementById("correct_places")[:value]
       matched = search dict, exclude, included, correct_places
-      
-      html = matched.map do |m|
-        "<div><a href=\"https://www.merriam-webster.com/dictionary/#{m}\" target=\"_blank\">#{m}</a></div>"
-      end.join
+
+      html = matched.map { template.result_with_hash word: _1 }.join
       document.getElementById("result")[:innerHTML] = html
     end
 
