--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wordle Search</title>
-
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
-    <!--Replace with your tailwind.css once created-->
-    <link href="https://unpkg.com/@tailwindcss/custom-forms/dist/custom-forms.min.css" rel="stylesheet" />
-
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
-
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
       html {
         font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       }
+      .result {
+        font-family: "Noto Sans Mono", monospace;
+      }
     </style>
   </head>
-  <form class="bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
+  <form class="bg-gray-900 w-full px-8 pt-6 pb-8 mb-4">
     <div class="mb-4">
       <label class="block text-blue-300 py-2 font-bold mb-2" for="exclude">
-        exclude
+        Excluded characters
       </label>
       <input
         class="shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
@@ -30,7 +29,7 @@
     </div>
     <div class="mb-4">
       <label class="block text-blue-300 py-2 font-bold mb-2" for="included">
-        included
+        Included characters
       </label>
       <input
         class="shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
@@ -41,7 +40,7 @@
     </div>
     <div class="mb-4">
       <label class="block text-blue-300 py-2 font-bold mb-2" for="correct_places">
-        correct places
+        Correct places
       </label>
       <input
         class="shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
@@ -52,7 +51,7 @@
     </div>
     <div class="flex items-center justify-between pt-4">
       <button
-        class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
+        class="bg-blue-600 w-full text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
         id="search_button"
         type="button"
       >
@@ -60,7 +59,7 @@
       </button>
     </div>
   </form>
-  <div id="result"></div>
+  <div id="result" class="result"></div>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/ruby-head-wasm-wasi@0.3.0-2022-09-06-f/dist/browser.script.iife.js"></script>
     <script type="text/ruby">
@@ -4675,8 +4674,12 @@
       end
 
       template = ERB.new(<<~'END_HTML')
-        <div>
-          <a href="https://www.merriam-webster.com/dictionary/<%= word %>" target="_blank"><%= word %></a>
+        <div
+          class="w-full flex flex-col justify-center items-center text-lg tracking-[1em] leading-loose uppercase"
+        >
+          <a
+            href="https://www.merriam-webster.com/dictionary/<%= word %>"
+            target="_blank"><%= word %></a>
         </div>
       END_HTML
 
