検索結果の表示を大きくし、included文字を赤くします。

--- a/index.html
+++ b/index.html
@@ -4667,7 +4667,7 @@
         matched = dict.grep(/^#{correct_spots}$/)
                       .grep_v(/[#{exclude}]/)
 
-        included.to_s.chars.each do |char|
+        included.chars.each do |char|
           matched = matched.grep(/#{char}/)
         end
         matched
@@ -4675,7 +4675,7 @@
 
       template = ERB.new(<<~'END_HTML')
         <div
-          class="w-full flex flex-col justify-center items-center text-lg tracking-[1em] leading-loose uppercase"
+          class="w-full flex flex-col justify-center items-center text-4xl tracking-[1em] leading-loose uppercase"
         >
           <a
             href="https://www.merriam-webster.com/dictionary/<%= word %>"
@@ -4687,11 +4687,20 @@
       search_button = document.getElementById "search_button"
       search_button.addEventListener "click" do
         exclude = document.getElementById("exclude")[:value]
-        included = document.getElementById("included")[:value]
+        included = document.getElementById("included")[:value].to_s
         correct_places = document.getElementById("correct_places")[:value]
         matched = search dict, exclude, included, correct_places
 
-        html = matched.map { template.result_with_hash word: _1 }.join
+        html = matched.map do |word|
+          word = word.chars.map do |char|
+            if included.include? char
+              "<span class='text-red-500'>#{char}</span>"
+            else
+              char
+            end
+          end.join
+          template.result_with_hash word: word
+        end.join
         document.getElementById("result")[:innerHTML] = html
       end
 
