--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <div id="result" class="result"></div>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/ruby-head-wasm-wasi@0.3.0-2022-10-01-a/dist/browser.script.iife.js"></script>
+    <script type="text/ruby" src="wordle_search.rb"></script>
     <script type="text/ruby" src="main.rb"></script>
   </body>
 </html>
