correct placesに色をつけます。

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </label>
       <input
         class="shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
-        id="correct_places" type="text" value="\w\w\w\w\w" />
+        id="correct_places" type="text" value="*****" />
     </div>
     <div class="flex items-center justify-between pt-4">
       <button
