--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Wordle Search</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer
-    src="https://cdn.jsdelivr.net/npm/ruby-head-wasm-wasi@0.4.0/dist/browser.script.iife.js"></script>
+    src="https://cdn.jsdelivr.net/npm/@ruby/head-wasm-wasi@2.4.0/dist/browser.script.iife.js"></script>
   <script type="text/ruby" src="wordle_search.rb"></script>
   <script type="text/ruby" src="main.rb"></script>
   <style>
