Use require_relative

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer
     src="https://cdn.jsdelivr.net/npm/@ruby/head-wasm-wasi@2.5.0-2024-04-02-a/dist/browser.script.iife.js"></script>
-  <script type="text/ruby" src="wordle_search.rb"></script>
-  <script type="text/ruby" src="main.rb"></script>
+  <script type="text/ruby" src="main.rb" data-eval="async"></script>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
