--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <form class="bg-gray-900 w-full px-8 pt-6 pb-8 mb-4">
+  <form id="app_root" class="bg-gray-900 w-full px-8 pt-6 pb-8 mb-4">
     <div class="mb-4">
       <label class="block text-blue-300 py-2 font-bold mb-2" for="exclude">
         Excluded characters
