--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer
     src="https://cdn.jsdelivr.net/npm/@ruby/head-wasm-wasi@2.5.0-2024-04-02-a/dist/browser.script.iife.js"></script>
+  <script type="text/ruby" src="https://gist.githubusercontent.com/ledsun/cb86ed70536e9969caa948df78735db8/raw/7d952bc4853c2f354e7e2f2181e9f5141a7a3f91/orbital_ring.rb"></script>
   <script type="text/ruby" src="main.rb" data-eval="async"></script>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
