Use specific version of orbital ring

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer
     src="https://cdn.jsdelivr.net/npm/@ruby/head-wasm-wasi@2.5.0-2024-04-02-a/dist/browser.script.iife.js"></script>
-  <script type="text/ruby" src="https://cdn.jsdelivr.net/gh/ledsun/orbital_ring/orbital_ring.rb"></script>
+  <script type="text/ruby" src="https://cdn.jsdelivr.net/gh/ledsun/orbital_ring@0.0.1/orbital_ring.rb"></script>
   <script type="text/ruby" src="main.rb" data-eval="async"></script>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
